--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 
+# database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/exam
+spring.datasource.username=
+spring.datasource.password=
+
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+# jpa configuration
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# change port to 8181, as 8080 is allready in use
+server.port=8181
